<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema_oscuro"
    android:id="@+id/container_fragment"
    tools:context=".ui.fragment.EscribirNotaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/tituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/titulo_nota"
            android:background="@drawable/edit_txt_shape"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/subtituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:hint="@string/subtitulo_nota"
            android:background="@drawable/edit_txt_shape"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/Cgreen"
                android:layout_width="25dp"
                android:layout_height="25dp"

                android:background="@drawable/green_box"/>
            <ImageView
                android:id="@+id/Cpink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/pink_box"/>
            <ImageView
                android:id="@+id/Cyellow"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/yellow_box"/>


        </LinearLayout>

        <EditText
            android:id="@+id/contenidoNota"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:hint="@string/contenido_nota"
            android:background="@drawable/edit_txt_shape"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="bottom|right"
        android:src="@drawable/ic_baseline_check_24"
        tools:ignore="ContentDescription,RtlHardcoded" />

</FrameLayout>