<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_claro"
    android:padding="5dp"
    tools:context="com.mynotas.notasApp.ui.fragment.EditNotaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/EdittituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_txt_shape"
            android:fontFamily="@font/didactgothic_regular"
            android:hint="@string/titulo_nota"
            android:maxLines="1"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/EditsubtituloNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_txt_shape"
            android:fontFamily="@font/didactgothic_regular"
            android:hint="@string/subtitulo_nota"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="#7E7D7D"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Cgreen"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/green_box" />

            <ImageView
                android:id="@+id/Cpink"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/pink_box" />

            <ImageView
                android:id="@+id/Cpurple"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/purple_box" />


        </LinearLayout>

        <EditText
            android:id="@+id/EditcontenidoNota"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_txt_shape"
            android:fontFamily="@font/didactgothic_regular"
            android:gravity="start"
            android:hint="@string/contenido_nota"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveEditNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="26dp"
        android:src="@drawable/ic_baseline_check_24" />

</FrameLayout>